--- a/css folder/home.css
+++ b/css folder/home.css
@@ -96,8 +96,10 @@
     font-size: 1em;
     font-weight: 500;
     padding: 8px 25px;
-    display: flex;
+    display: inline-flex;
+    justify-content: center;
     align-items: center;
+    gap: 10px;
     margin-top: 40px;
     border-radius: 10px;
     cursor: pointer;
@@ -115,7 +117,7 @@
 }
 
 .swiper-slide .text-content .read-btn i {
-    font-size: clamp(1rem, 2.5vw, 2rem);
+    font-size: 1.2em;
     transition: 0.3s ease;
 }
 
