--- a/css folder/media-queries.css
+++ b/css folder/media-queries.css
@@ -1,5 +1,5 @@
-/* ======media queries (max-widht: 1000px) ======*/
-@media screen and (max-width:1100px) {
+/* ======media queries (max-width: 768px) ======*/
+@media screen and (max-width:768px) {
     header .nav-bar {
         padding: 0 50px;
 
@@ -25,8 +25,8 @@
     }
 
     .thumbs-container img {
-        width: 40px;
-        height: 40px;
+        width: 80px;
+        height: 50px;
     }  
 
     .nav-menu-btn{
